@@ -2,11 +2,11 @@ package cl.duoc.ms_products_db.service;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -14,35 +14,27 @@ import java.util.Map;
 @Service
 public class ClimaService {
 
-    // Asegúrate de tener esto en application.properties:
-    // weather.api.key=404fe577ee8921c5b902a764daca8b81eed6e5c30f6bf18eee2585a3d7f112d3
     @Value("${weather.api.key}")
     private String apiKey;
 
     private final String BASE_URL = "https://api.meteored.com";
 
+    @SuppressWarnings("unchecked")
     public Map<String, Object> obtenerClima(String ciudad) {
         RestTemplate restTemplate = new RestTemplate();
         Map<String, Object> respuestaFinal = new HashMap<>();
 
         try {
-            // ---------------------------------------------------
-            // PASO CRÍTICO: CODIFICACIÓN UTF-8
-            // Convertimos "Concepción" -> "Concepci%C3%B3n"
-            // Esto evita el error 500 al llamar a la API externa.
-            // ---------------------------------------------------
-            String ciudadEncoded = URLEncoder.encode(ciudad, StandardCharsets.UTF_8.toString());
 
-            // ---------------------------------------------------
-            // PASO 1: Buscar ID de la ciudad
-            // ---------------------------------------------------
+            String ciudadEncoded = URLEncoder.encode(ciudad, StandardCharsets.UTF_8.toString());
             String searchUrl = String.format("%s/api/location/v1/search/txt/%s?apikey=%s",
                     BASE_URL, ciudadEncoded, apiKey);
 
-            // Log para depuración en servidor
+
             System.out.println("Backend consultando a Meteored: " + searchUrl);
 
-            List<Map<String, Object>> searchResult = restTemplate.getForObject(searchUrl, List.class);
+
+            List<Map<String, Object>> searchResult = (List<Map<String, Object>>) restTemplate.getForObject(searchUrl, List.class);
 
             if (searchResult == null || searchResult.isEmpty()) {
                 System.out.println("Meteored no encontró la ciudad: " + ciudad);
@@ -51,7 +43,7 @@ public class ClimaService {
 
             Map<String, Object> location = searchResult.get(0);
             
-            // Obtener ID con fallback (puede ser 'id' o 'key')
+
             Object idObj = location.get("id");
             if (idObj == null) idObj = location.get("key");
             
@@ -59,27 +51,21 @@ public class ClimaService {
 
             String locationId = idObj.toString();
             String locationName = (String) location.get("name");
-
-            // ---------------------------------------------------
-            // PASO 2: Obtener Clima Actual
-            // ---------------------------------------------------
             String weatherUrl = String.format("%s/api/weather/current/%s?apikey=%s",
                     BASE_URL, locationId, apiKey);
 
-            Map<String, Object> weatherData = restTemplate.getForObject(weatherUrl, Map.class);
+
+            Map<String, Object> weatherData = (Map<String, Object>) restTemplate.getForObject(weatherUrl, Map.class);
             
             if (weatherData == null) return null;
 
-            // ---------------------------------------------------
-            // PASO 3: Normalizar Respuesta
-            // ---------------------------------------------------
             Object temp = weatherData.get("temp");
-            // A veces viene anidado
+
             if (temp == null && weatherData.containsKey("main")) {
                 Map<String, Object> main = (Map<String, Object>) weatherData.get("main");
                 if (main != null) temp = main.get("temp");
             }
-            // A veces viene como Temperature.Metric.Value
+
             if (temp == null && weatherData.containsKey("Temperature")) {
                  Map<String, Object> temperature = (Map<String, Object>) weatherData.get("Temperature");
                  Map<String, Object> metric = (Map<String, Object>) temperature.get("Metric");
@@ -96,7 +82,7 @@ public class ClimaService {
                 icon = weatherData.get("WeatherIcon");
             }
 
-            // Armamos respuesta estandarizada
+
             Map<String, Object> mainBlock = new HashMap<>();
             mainBlock.put("temp", temp != null ? temp : 0);
 
@@ -106,7 +92,7 @@ public class ClimaService {
 
             respuestaFinal.put("name", locationName);
             respuestaFinal.put("main", mainBlock);
-            respuestaFinal.put("weather", List.of(weatherBlock));
+            respuestaFinal.put("weather", Collections.singletonList(weatherBlock));
 
             return respuestaFinal;
 
